--- a/template.html
+++ b/template.html
@@ -17,12 +17,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
     <script>
+      let detectiveDictionary = null;
       fetch("./dictionary.json")
         .then((res) => res.json())
         .then((data) => {
           console.log("Словник завантажено:", data);
+          detectiveDictionary = data;
         })
         .catch((err) => console.error("Помилка завантаження JSON:", err));
+
       let data = null;
       document
 
