--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <title>Word генератор</title>
   </head>
   <body>
+    <header style="margin: 40px">
+      <ul style="list-style: none; display: flex; gap: 20px">
+        <li><a href="index.html"> Початкові документи </a></li>
+        <li><a href="request_page.html"> Сторінка запитів</a></li>
+        <li><a href="request_page.html"> Сторінка тимчиків</a></li>
+        <li><a href="request_page.html">Сторінка оглядів</a></li>
+      </ul>
+    </header>
+
     <input type="file" id="pdf-upload" accept=".pdf" />
     <pre id="output"></pre>
-    <h2>Генерація Word-документа із шаблону</h2>
+    <h2>Створити документи після внесення провадження</h2>
 
     <button id="generate">Генерувати документ</button>
 
